src/mslearn-docker-kubernetes/backend/service-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: products-cluster-service
  namespace: default
  labels:
    app: products
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
