src/mslearn-docker-kubernetes/backend/service-ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cna-express
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: products.221e1cebec8b45349d0f.spaincentral.aksapp.io
    http:
      paths:
      - path: / # Which path is this rule referring to
        pathType: Prefix
        backend: # How the ingress will handle the requests
          service:
            name: products-cluster-service # Which service the request will be forwarded to
            port: 
              name: http # Which port in that service
